--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,16 @@
   </h1>
 </div>
 <h2 style="text-align: center;">請點擊報表連結</h2>
-<div style="margin: 0 auto;width: 1280px;">
+<div>
   <ul>
     <li>
       <h4><a routerLink="reportFour">報表4</a></h4>
     </li>
     <li>
       <h4><a routerLink="reportFive">報表5</a></h4>
+    </li>
+    <li>
+      <h4><a routerLink="reportSix">報表6</a></h4>
     </li>
   </ul>
 </div>
