--- a/src/app/report-five/report-five.component.html
+++ b/src/app/report-five/report-five.component.html
@@ -1,3 +1,229 @@
-<p>
-  report-five works!
-</p>
+<h6 style="margin-bottom: 5px;">5.賠款明細表(月報)，賠款/收回明細資料。多次收回即顯示多筆</h6>
+<h6 style="text-align: center;font-size: 10px;margin-bottom: 5px;">
+  104年1-12月輸出保險賠款明細表
+</h6>
+<table
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: auto;width: 100%;">
+  <tbody>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        被保險人
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        案號
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        保險單號碼/保險證明書號碼
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        輸出貨價
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        被保險人信用配額或開狀銀行信用配額(美元/新臺幣元)
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        買主/開狀銀行
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        買主國家/地區
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        交易產品
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        買主信用等級
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        賠付日期
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        賠付金額(新臺幣元)
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        賠付原因
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        簽單年度
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        再保險攤賠比率(%)
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        再保險攤賠(新臺幣元)
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        本行自留賠款(新臺幣元
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        適用582專案金額(新臺幣元）
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        適用加強輸出保險準備計劃(新臺幣元）
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        調整後本行自留賠款(新臺幣元）
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+    <tr style="height: 2rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+        經辦單位
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 45%;">
+        V
+      </td>
+    </tr>
+  </tbody>
+</table>
