--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 ul{
-    list-style: none;display: inline-flex;
-    li{
-        margin-right: 10px;
-    }
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    padding: 0px;
 }
