--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
     <li>
       <h4><a routerLink="reportSix">報表6</a></h4>
     </li>
+    <li>
+      <h4><a routerLink="reportSeven">報表7</a></h4>
+    </li>
   </ul>
 </div>
 <div style="size: A4;margin: 0 auto;width: 820px;">
