--- a/src/app/report-five/report-five.component.html
+++ b/src/app/report-five/report-five.component.html
@@ -51,7 +51,7 @@
     </tr>
     <tr style="height: 2rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
-        被保險人信用配額或開狀銀行信用配額(美元/新臺幣元)
+        被保險人信用配額或開狀銀行信用配額<br />(美元/新臺幣元)
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
@@ -117,7 +117,7 @@
     </tr>
     <tr style="height: 2rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
-        賠付金額(新臺幣元)
+        賠付金額<br />(新臺幣元)
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
@@ -161,7 +161,7 @@
     </tr>
     <tr style="height: 2rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
-        再保險攤賠(新臺幣元)
+        再保險攤賠<br />(新臺幣元)
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
@@ -172,7 +172,7 @@
     </tr>
     <tr style="height: 2rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
-        本行自留賠款(新臺幣元
+        本行自留賠款<br />(新臺幣元)
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
@@ -183,7 +183,7 @@
     </tr>
     <tr style="height: 2rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
-        適用582專案金額(新臺幣元）
+        適用582專案金額<br />(新臺幣元）
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
@@ -194,7 +194,7 @@
     </tr>
     <tr style="height: 2rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
-        適用加強輸出保險準備計劃(新臺幣元）
+        適用加強輸出保險準備計劃<br />(新臺幣元）
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
@@ -205,7 +205,7 @@
     </tr>
     <tr style="height: 2rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
-        調整後本行自留賠款(新臺幣元）
+        調整後本行自留賠款<br />(新臺幣元）
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
