--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,18 @@
     <li>
       <h4><a routerLink="reportSeven">報表7</a></h4>
     </li>
+    <li>
+      <h4><a routerLink="reportEight">報表8</a></h4>
+    </li>
+    <li>
+      <h4><a routerLink="reportNine">報表9</a></h4>
+    </li>
+    <li>
+      <h4><a routerLink="reportTen">報表10</a></h4>
+    </li>
+    <li>
+      <h4><a routerLink="reportEleven">報表11</a></h4>
+    </li>
   </ul>
 </div>
 <div style="size: A4;margin: 0 auto;width: 820px;">
