--- a/src/app/report-six/report-six.component.html
+++ b/src/app/report-six/report-six.component.html
@@ -3,7 +3,7 @@
   104年12月輸出保險理賠前收回明細表
 </h6>
 <table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: auto;width: 100%;">
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
   <tbody>
     <tr style="height: 2rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
