--- a/src/app/report-five/report-five.component.html
+++ b/src/app/report-five/report-five.component.html
@@ -1,9 +1,9 @@
 <h6 style="margin-bottom: 5px;">5.賠款明細表(月報)，賠款/收回明細資料。多次收回即顯示多筆</h6>
-<h6 style="text-align: center;font-size: 10px;margin-bottom: 5px;">
+<h6 style="text-align: center;margin-bottom: 5px;">
   104年1-12月輸出保險賠款明細表
 </h6>
 <table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: auto;width: 100%;">
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
   <tbody>
     <tr style="height: 2rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
