--- a/src/app/report-four/report-four.component.html
+++ b/src/app/report-four/report-four.component.html
@@ -6,7 +6,7 @@
     108.03.15止累計逾期可能賠付案件金額表
   </div> -->
   <table
-    style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: auto;width: 100%;">
+    style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
     <thead>
       <tr style="height: 2rem">
         <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
@@ -141,7 +141,7 @@
     幣別:新臺幣元
   </div> 
   <table
-    style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: auto;width: 100%;">
+    style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
     <thead>
       <tr style="height: 2rem">
         <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
@@ -243,7 +243,7 @@
     幣別:新臺幣元
   </div> 
   <table
-    style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: auto;width: 100%;">
+    style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
     <thead>
       <tr style="height: 2rem">
         <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
